@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: regexp.test,v 1.22.4.7 2008/08/22 15:51:38 dgp Exp $
+# RCS: @(#) $Id: regexp.test,v 1.22.4.8 2009/09/22 01:36:42 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -246,6 +246,9 @@ test regexp-6.8 {regexp errors} {
 test regexp-6.9 {regexp errors, -start bad int check} {
     list [catch {regexp -start bogus {^$} {}} msg] $msg
 } {1 {bad index "bogus": must be integer?[+-]integer? or end?[+-]integer?}}
+test regexp-6.10 {regexp errors} {
+    list [catch {regexp {a[} b} msg] $msg
+} {1 {couldn't compile regular expression pattern: brackets [] not balanced}}
 
 test regexp-7.1 {basic regsub operation} {
     list [regsub aa+ xaxaaaxaa 111&222 foo] $foo
@@ -305,6 +308,15 @@ test regexp-7.17 {regsub utf compliance} {
     regsub a\u4e4eb xyza\u4e4ebijka\u4e4ebpqr 555 bar
     list [string compare $foo $bar] [regexp 4 $bar]
 } {0 0}
+test regexp-7.18 {basic regsub replacement} {
+    list [regsub a+ aaa {&} foo] $foo
+} {1 aaa}
+test regexp-7.19 {basic regsub backslash replacement} {
+    list [regsub a+ aaa {\0} foo] $foo
+} {1 aaa}
+test regexp-7.20 {basic regsub backslash replacement} {
+    list [regsub a+ aaa {\\\0} foo] $foo
+} {1 {\aaa}}
 
 test regexp-8.1 {case conversion in regsub} {
     list [regsub -nocase a(a+) xaAAaAAay & foo] $foo
